[FIX] bug fixed about z-index of menu hovered

--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@
   background: #FFF;
   border: 1px solid #362d25;
   border-top: none;
-  z-index: 10;
+  z-index: 20;
 }
 
 .nav--main__sub-menus > * {
